--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -79,3 +79,24 @@ input {
     text-overflow: ellipsis;
   }
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(66, 66, 66, 0.3);
+  border-radius: 5px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(66, 66, 66, 0.3);
+  background-color: #bebebe;
+}
